@@ -1059,7 +1059,7 @@ input.column-boolean {
 .infobar {
     line-height: @line-height-computed;
     position: fixed;
-    top: 65px;
+    top: 30px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
